--- a/wp-content/themes/oceanwp-child/custom/concept.css
+++ b/wp-content/themes/oceanwp-child/custom/concept.css
@@ -1,9 +1,4 @@
-/*#top-bar-wrap {
-    border: 0px;
-}
-#site-header {
-    border: 0px;
-}*/
+
 
 /*Section width*/
 .elementor-8 .elementor-section {
