--- a/wp-content/themes/oceanwp-child/custom/voyages.css
+++ b/wp-content/themes/oceanwp-child/custom/voyages.css
@@ -12,10 +12,7 @@
     min-width: 300px!important;
 }
 
-/*Text editor*/
-span.black {
-    color: #0b0b0b;
-}
+
 /*Images section autres prestations*/
 .elementor-6 .elementor-element-d9a54fb .elementor-image {
     min-width: 160%!important;
